--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "chai": "^4.5.0",
+    "dotenv": "^17.2.3",
     "mocha": "^11.7.4",
     "mochawesome": "^7.1.4",
     "supertest": "^7.1.4"
